--- a/build.gradle
+++ b/build.gradle
@@ -15,22 +15,58 @@ springBoot {
     mainClass = 'io.shrouded.UdpServerApp'
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'io.netty:netty-all:4.1.109.Final'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+ext {
+    nettyVersion = '4.2.2.Final'
+    logstashVersion = '8.1'
+    jacksonJsr310Version = '2.17.0'
+    hazelcastVersion = '5.4.0'
+    vertxVersion = '4.5.15'
+    scramClientVersion = '2.1'
+    junitVersion = '5.10.0'
 }
+
+dependencies {
+    // Spring Boot
+    implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.boot:spring-boot-starter-validation")
+    implementation("org.springframework.boot:spring-boot-starter-cache")
+
+    // Jackson
+    implementation("com.fasterxml.jackson.core:jackson-databind")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonJsr310Version")
+
+    // Logging
+    implementation("net.logstash.logback:logstash-logback-encoder:$logstashVersion")
+
+    // Hazelcast
+    implementation("com.hazelcast:hazelcast:$hazelcastVersion")
+    implementation("com.hazelcast:hazelcast-spring:$hazelcastVersion")
+
+    // Netty
+    implementation("io.netty:netty-all:$nettyVersion")
+
+    // Vert.x
+    implementation("io.vertx:vertx-core:$vertxVersion")
+    implementation("io.vertx:vertx-pg-client:$vertxVersion")
+
+    // Reactor
+    implementation("io.projectreactor:reactor-core")
+
+    // Flyway
+    implementation("org.flywaydb:flyway-core")
+
+    // SCRAM auth
+    implementation("com.ongres.scram:client:$scramClientVersion")
+
+    // Lombok
+    compileOnly("org.projectlombok:lombok")
+    annotationProcessor("org.projectlombok:lombok")
+
+    // Testing
+    testImplementation(platform("org.junit:junit-bom:$junitVersion"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
 
 test {
     useJUnitPlatform()
