--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,16 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:7.2
+    container_name: redisdb
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: ["redis-server", "--appendonly", "yes"]
+
   flyway:
     image: flyway/flyway:latest
     container_name: flyway
@@ -29,3 +39,4 @@ services:
 
 volumes:
   postgres-data:
+  redis-data:
