--- a/build.gradle
+++ b/build.gradle
@@ -28,17 +28,17 @@ ext {
 dependencies {
     // Spring Boot
     implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-cache")
 
-    // Jackson
-    implementation("com.fasterxml.jackson.core:jackson-databind")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonJsr310Version")
+
+    //hashing
+    implementation("net.openhft:zero-allocation-hashing:0.2")
+
 
     // Logging
     implementation("net.logstash.logback:logstash-logback-encoder:$logstashVersion")
 
-    // Hazelcast
+    // reddis
     implementation("io.lettuce:lettuce-core:6.7.1.RELEASE")
 
     // Netty
